Fix Vercel config: set framework to null to allow API routes

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "buildCommand": "npm run build:demo",
   "outputDirectory": "demo/dist",
-  "framework": "vite",
+  "framework": null,
   "installCommand": "npm install",
   "devCommand": "npm run start",
   "rewrites": [
