--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,11 @@
 {
-  "buildCommand": "npm run build:demo",
+  "buildCommand": "npm run build:demo && cp -r api demo/dist/ 2>/dev/null || true",
   "outputDirectory": "demo/dist",
   "framework": null,
   "installCommand": "npm install",
   "devCommand": "npm run start",
-  "cleanUrls": false,
-  "trailingSlash": false,
   "rewrites": [
-    { "source": "/", "destination": "/generic.html" },
-    { "source": "/api/(.*)", "destination": "/api/$1" }
+    { "source": "/", "destination": "/generic.html" }
   ],
   "headers": [
     {
