Fix Vercel 404: outputDirectory public, simon-with-score path

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
   "buildCommand": "npm run build:demo && mkdir -p public && cp -r demo/dist/* public/",
+  "outputDirectory": "public",
   "framework": null,
   "installCommand": "npm install",
   "devCommand": "npm run start",
